# VulkanCraft

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  VulkanCraft.aps  VulkanCraft.sln  VulkanCraft.vcxproj  main.cpp  notes.md
cmake/: VulkanCraftConfig.h.in
include/: application.h  callbacks.h  command.h  commandPool.h  device.h  fileio.h  mesh.h  queuefamily.h  renderer.h  swapchain.h  temp.h  texture.h  validationLayer.h  vertex.h
lib/: CMakeLists.txt
lib/GLFW/: CMakeLists.txt  cmake_uninstall.cmake
lib/GLFW/src/: glfw3.pc
lib/GLM/: glm.pc
shaders/: shader.frag  shader.vert
src/: application.cpp  command.cpp  commandPool.cpp  device.cpp  mesh.cpp  renderer.cpp  swapchain.cpp  texture.cpp
